# duroxide-node

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json
.agents/skills/duroxide-node-orchestrations/: SKILL.md
.agents/skills/napi-interop/: SKILL.md
.agents/skills/npm-publish/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: publish.yml
__tests__/: admin_api.test.js  advanced_features.test.js  async_blocks.test.js  copilot_chat.test.js  e2e.test.js  kv_store.test.js  races.test.js  sessions.test.js  tags.test.js  typed_apis.test.js
__tests__/scenarios/: toygres-node.test.js
ci/smoke/: README.md  run-local.ps1  run-local.sh  run-registry.ps1  run-registry.sh  smoke.mjs
docs/: architecture.md  user-guide.md
lib/: duroxide.d.ts  duroxide.js
npm/npm/darwin-arm64/: package.json
npm/npm/darwin-x64/: package.json
npm/npm/linux-arm64-gnu/: README.md  package.json
npm/npm/linux-x64-gnu/: package.json
npm/npm/win32-x64-msvc/: README.md  package.json
src/: client.rs  handlers.rs  lib.rs  pg_provider.rs  provider.rs  runtime.rs  types.rs
