[package]
name = "duroxide-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
duroxide = { path = "../duroxide", features = ["sqlite"] }
duroxide-pg = { path = "../duroxide-pg" }
napi = { version = "2", features = ["async", "napi6", "serde-json"] }
napi-derive = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

[build-dependencies]
napi-build = "2"

[patch.crates-io]
duroxide = { path = "../duroxide" }

[profile.release]
lto = true
