[package]
name = "duroxide-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
duroxide = { version = "0.1.20", features = ["sqlite"] }
duroxide-pg = "0.1.22"
napi = { version = "2", features = ["async", "napi6", "serde-json"] }
napi-derive = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
parking_lot = "0.12"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
